force-app/main/default/objects/docutizexa__AttachmentConnect__c/docutizexa__AttachmentConnect__c.object-meta.xml
<CustomObject>
    <label>Attachment Connect</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Attachment Connect No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Connects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>