force-app/main/default/objects/docutizexa__AttachmentConnect__c/fields/docutizexa__Account__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attachment Connects</relationshipLabel>
    <relationshipName>AttachmentConnects</relationshipName>
    <type>Lookup</type>
</CustomField>