force-app/main/default/objects/docutizexa__AttachmentConnect__c/fields/docutizexa__Contact__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attachment Connects</relationshipLabel>
    <relationshipName>AttachmentConnects</relationshipName>
    <type>Lookup</type>
</CustomField>