force-app/main/default/objects/docutizexa__AttachmentConnect__c/fields/docutizexa__InternalUserAccessType__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__InternalUserAccessType__c</fullName>
    <label>Internal User Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organization Group</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>