force-app/main/default/objects/docutizexa__AttachmentConnect__c/fields/docutizexa__OrganizationGroup__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__OrganizationGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Group</label>
    <referenceTo>docutizexa__OrganizationGroup__c</referenceTo>
    <relationshipLabel>Attachment Connects</relationshipLabel>
    <relationshipName>AttachmentConnects</relationshipName>
    <type>Lookup</type>
</CustomField>