force-app/main/default/objects/docutizexa__AttachmentConnect__c/fields/docutizexa__ReportName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ReportName__c</fullName>
    <formula>docutizexa__Report__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setting Name</label>
    <type>Text</type>
</CustomField>