force-app/main/default/objects/docutizexa__AttachmentConnect__c/fields/docutizexa__TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__TargetRecordId__c</fullName>
    <label>Target Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>